v1:i have add student table

--- a/git.html
+++ b/git.html
@@ -6,6 +6,18 @@
   </head>
   <body>
     <h1>the longer you live more you realise</h1>
+    <h2>this is new headding</h2>
+    <table>
+      <th>
+        <td>registration no</td>
+        <td>student name</td>
+
+      </th>
+      <tr>
+        <td>pi-b5-001</td>
+        <td>praveen</td>
+      </tr>
+    </table>
 
   </body>
 </html>
